--- a/17-1-midterm/DB/03.데이터모델링의_주요개념.md
+++ b/17-1-midterm/DB/03.데이터모델링의_주요개념.md
@@ -2,7 +2,8 @@
 
 ### 개요
 #### 논리적 데이터베이스 설계
-- 현실세계의 업무를 분석하여 이를 약속된 표기법을 사용하여 개념적 모델(ERD)로 표현하는 과정, 전체 데이터베이스 설꼐에서 핵심적인 부분
+- 현실세계의 업무를 분석하여 이를 약속된 표기법을 사용하여 개념적 모델(ERD)로 표현하는 과정, 전체 데이터베이스 설계에서 핵심적인 부분
+- 논리적 데이터베이스 설계 과정 = 데이터 모델링
 #### 데이터 모델링의 목적
 - 정보 시스템을 구축하는데 필요한 데이터를 약속된 표기법에 의해 표현함으로써 시스템 구축 대상이 되는 업무 내용을 정확하게 분석하고자 함
 
