--- a/java/spring/이슈해결.md
+++ b/java/spring/이슈해결.md
@@ -1,5 +1,21 @@
 # 이슈해결
 
-- [spring project 생성시 xml 파일 에러](http://krksap.tistory.com/446)
-- [spring root path 설정](http://m.blog.naver.com/kbobae333/220513064591)
-- [tool.jar not found 문제](http://camon85.blogspot.kr/2014/08/maven-build-toolsjar-not-found.html)
+- ### spring 버전
+  - 4.0.6.RELEASE부터 JAVA 8을 지원한다!!
+```
+<properties>
+  <java-version>1.6</java-version>
+  <org.springframework-version>4.0.6.RELEASE</org.springframework-version>
+  <org.aspectj-version>1.6.10</org.aspectj-version>
+  <org.slf4j-version>1.6.6</org.slf4j-version>
+</properties>
+```
+- ### 기초 셋팅
+  - [tomcat 설치](http://shuman.tistory.com/116)
+  - [spring 프로젝트 시작](http://addio3305.tistory.com/35)
+
+- ### 이슈모음
+  - [프로젝트 시작시 안될때 한번 봐봐](http://ojc.asia/bbs/board.php?bo_table=LecSpring&wr_id=405)
+  - [spring project 생성시 xml 파일 에러](http://krksap.tistory.com/446)
+  - [spring root path 설정](http://m.blog.naver.com/kbobae333/220513064591)
+  - [tool.jar not found문제](http://camon85.blogspot.kr/2014/08/maven-build-toolsjar-not-found.html)
