--- a/java/spring/이슈해결.md
+++ b/java/spring/이슈해결.md
@@ -1,5 +1,8 @@
 # 이슈해결
 
+- ### tomcat 시작문제
+  - tomcat은 JAVA_HOME, Path 환경변수 설정이 되어있어야 실행이 된다.
+
 - ### spring 버전
   - 4.0.6.RELEASE부터 JAVA 8을 지원한다!!
 ```
