정규표현식 자주쓰이는 것들 추가

--- a/Regular Expression/각 언어별 사용법.md
+++ b/Regular Expression/각 언어별 사용법.md
@@ -29,3 +29,33 @@ var regex = /\d+/g;
 //var regex = /여기에 정규표현식을 입력하세요/g
 console.log(searchTarget.match(regex));
 ```
+
+```javascript
+function isEmail(email) {
+	var regex = /^([a-zA-Z0-9_.+-])+\@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$/;
+	return regex.test(email);
+}
+
+function isKorean(text){
+	var regex = /^[가-힣]+$/;
+	return regex.test(text);
+}
+
+function isEnglish(text)
+{
+	var regex = /^[a-zA-Z]+$/;
+	return regex.test(text);
+}
+
+function isPassword(text)
+{
+	var regex = /^[a-zA-Z0-9]+$/;
+	return regex.test(text);
+}
+
+function isDecimal(text)
+{
+	var regex = /^\d*(\.\d+)?$/;
+	return regex.test(text);
+}
+```
