[수정] #1 오타수정

--- a/java/eclipse/단축키.md
+++ b/java/eclipse/단축키.md
@@ -1,4 +1,4 @@
 # 이클립스 단축키
 
 - `ctrl + shift + o` 자동 임포트
-- `alt + shift + sgit` source 메뉴 표시 (오버라이드, 상속 등 기능 제공)
+- `alt + shift + s` source 메뉴 표시 (오버라이드, 상속 등 기능 제공)
