[추가] git diff 파일이름만 보기 추가

--- a/git/명령어 모음.md
+++ b/git/명령어 모음.md
@@ -2,7 +2,12 @@
 
 - **이전 코드와 비교하기**
 ```bash
-git diff
+$ git diff
 
-git diff [비교 commit 번호] [대상]
+$ git diff [비교 commit 번호] [대상]
+```
+
+- **이전 코드와 비교시 파일 이름만 보기**
+```bash
+$ git diff -–name-only [비교 commit 번호] [대상]
 ```
