[수정] git bash 한글 깨지는 문제 해결하는 코드 추가

--- a/git/환경설정.md
+++ b/git/환경설정.md
@@ -14,4 +14,8 @@ git config --global user.email "이메일주소"
 git config --global color.ui "auto"
 터미널에 표시되는 메세지에 칼라 표시
 
+git config --global core.quotepath false
+git bash 사용시 한글깨져 보이는 문제 해결
+(이스케이프 문자 인식 해제)
+
 ```
