--- a/git/명령어 모음.md
+++ b/git/명령어 모음.md
@@ -11,3 +11,14 @@ $ git diff [비교 commit 번호] [대상]
 ```bash
 $ git diff -–name-only [비교 commit 번호] [대상]
 ```
+
+- **커밋 메세지 여러줄로 작성하기**
+```bash
+$ git commit -am "
+[여기는 제목이 되고]
+
+[여기는 설명부분이 된다]
+"
+```
+깃에서는 그저 여러 줄이지만 깃헙에서는 제목과 설명으로 나뉘어 보이게 되니 참고하자  
+저 개행이 매우 중요하다! 개행 안하면 그냥 제목임
