[수정] git 자동완성

--- a/git/환경설정.md
+++ b/git/환경설정.md
@@ -19,3 +19,8 @@ git bash 사용시 한글깨져 보이는 문제 해결
 (이스케이프 문자 인식 해제)
 
 ```
+
+## git 자동완성 사용하기
+```bash
+curl http://git.io/vfhol > ~/.git-completion.bash && echo '[ -f ~/.git-completion.bash ] && . ~/.git-completion.bash' >> ~/.bashrc
+```
