[수정] 폴더 구조. 및 git 명령어 모음

--- a/git/명령어 모음.md
+++ b/git/명령어 모음.md
@@ -14,7 +14,7 @@ $ git diff -–name-only [비교 commit 번호] [대상]
 
 - **커밋 메세지 여러줄로 작성하기**
 ```bash
-$ git commit -am "
+$ git commit -m "
 [여기는 제목이 되고]
 
 [여기는 설명부분이 된다]
@@ -22,3 +22,8 @@ $ git commit -am "
 ```
 깃에서는 그저 여러 줄이지만 깃헙에서는 제목과 설명으로 나뉘어 보이게 되니 참고하자  
 저 개행이 매우 중요하다! 개행 안하면 그냥 제목임
+
+- **변경된 파일 목록 갯수 세기**
+``` bash
+$ git status | grep 'modified:' | wc -l
+```
