[수정] git 명령어 모음

--- a/git/명령어 모음.md
+++ b/git/명령어 모음.md
@@ -27,3 +27,19 @@ $ git commit -m "
 ``` bash
 $ git status | grep 'modified:' | wc -l
 ```
+
+- **커밋하지 않은 작업내역 잠깐 저장해두기**
+커밋하지 않은 부분을 놔두고 잠깐 다른 브랜치로 갔다와야할때 유용하다.
+스텍과 같은 형태로 넣었다가 빼낼 수 있다
+```bash
+$ git stash
+$ git stash pop
+```
+저장한 stash 목록은 다음과 같이 확인이 가능하다
+```bash
+$ git stash list
+```
+stash에 저장한 것을 적용과 동시에 새로운 브랜치를 만들기
+```bash
+$ git stash branch [이름]
+```
