--- a/git/명령어 모음.md
+++ b/git/명령어 모음.md
@@ -22,3 +22,9 @@ $ git commit -am "
 ```
 깃에서는 그저 여러 줄이지만 깃헙에서는 제목과 설명으로 나뉘어 보이게 되니 참고하자  
 저 개행이 매우 중요하다! 개행 안하면 그냥 제목임
+
+- **다른 브랜치에서 일부 파일만 merge하기**
+```bash
+$ git checkout --patch branch2 file.py
+```
+[참고](https://stackoverflow.com/questions/18115411/how-to-merge-specific-files-from-git-branches)
