[추가] git 명령어

--- a/git/명령어 모음.md
+++ b/git/명령어 모음.md
@@ -43,3 +43,10 @@ stash에 저장한 것을 적용과 동시에 새로운 브랜치를 만들기
 ```bash
 $ git stash branch [이름]
 ```
+
+- **시간 변경하기**
+진짜 가끔있는 일이지만 이미 커밋해버린 로그의 시간을 변경해야하는 일이 있다.  
+그럴 땐 아래와 같이 하면 된다.
+```bash
+git commit --amend --date="YYYY-MM-DDThh:mm:ss±hh:mm" -C 28f2d7b81e037aa4fcdf45f6353cb7c2aa10e336
+```
