--- a/Nodejs/에러모음.md
+++ b/Nodejs/에러모음.md
@@ -4,3 +4,37 @@
 ### passport
 - `serializeUser`까지만 실행이 되고 `deserializeUser`가 실행이 되지 않을때
   - `app.use(session)`가 `app.use(passort)`보다 먼저 선언되어 있는지 확인할 것
+
+### nodejs
+
+- `RangeError: Invalid string length`
+  - nodejs가 감당할 수 있는 string의 범위를 넘어 갔을때 나오는 에러
+  - out of memory
+  - [참고](https://github.com/nodejs/node/issues/10738)
+```
+let maxString = '*'.repeat(Math.pow(2, 28) - 16);
+
+console.log(maxString.length);
+
+maxString += '*';
+
+console.log(maxString.length);
+```
+```
+268435440
+test.js:8
+maxString += '*';
+^
+
+RangeError: Invalid string length
+    at Object.<anonymous> (e:\DOC\prg\js\node\-test\test.js:8:1)
+    at Module._compile (module.js:571:32)
+    at Object.Module._extensions..js (module.js:580:10)
+    at Module.load (module.js:488:32)
+    at tryModuleLoad (module.js:447:12)
+    at Function.Module._load (module.js:439:3)
+    at Module.runMain (module.js:605:10)
+    at run (bootstrap_node.js:420:7)
+    at startup (bootstrap_node.js:139:9)
+    at bootstrap_node.js:535:3
+```
