[추가] git push.default simple

--- a/git/환경설정.md
+++ b/git/환경설정.md
@@ -18,6 +18,9 @@ git config --global core.quotepath false
 git bash 사용시 한글깨져 보이는 문제 해결
 (이스케이프 문자 인식 해제)
 
+git config --global push.default simple
+push만으로 해당 브랜치 올리기
+
 git config --global credential.username <githubID>
 github에 올릴때 Permission denied 403 에러 뜰 때 넣어주면 된다
 ```
