[추가] git revert

--- a/git/명령어 모음.md
+++ b/git/명령어 모음.md
@@ -55,3 +55,8 @@ $ git checkout --patch branch2 file.py
 ```bash
 git commit --amend --date="YYYY-MM-DDThh:mm:ss±hh:mm" -C 28f2d7b81e037aa4fcdf45f6353cb7c2aa10e336
 ```
+
+- **해당 커밋만 빼내기(되돌리기)**
+```bash
+$ git revert [commit]
+```
