[추가] git 삭제된 파일 되살리기

--- a/git/명령어 모음.md
+++ b/git/명령어 모음.md
@@ -60,3 +60,14 @@ git commit --amend --date="YYYY-MM-DDThh:mm:ss±hh:mm" -C 28f2d7b81e037aa4fcdf45
 ```bash
 $ git revert [commit]
 ```
+
+- **삭제된 파일 복구하기**
+```bash
+$ git ls-files -d // 삭제된 파일 리스트 확인
+$ git checkout [파일이름]
+```
+파일이 여러개인 경우
+```bash
+$ git ls-files -d | xargs
+$ git ls-files -d | xargs git checkout --
+```
