[추가] git 명령어

--- a/git/명령어 모음.md
+++ b/git/명령어 모음.md
@@ -71,3 +71,7 @@ $ git checkout [파일이름]
 $ git ls-files -d | xargs
 $ git ls-files -d | xargs git checkout --
 ```
+- **stage된 파일 unstage하기**
+```bash
+git reset HEAD [파일이름]
+```
