--- a/Linux/명령어 모음.md
+++ b/Linux/명령어 모음.md
@@ -4,3 +4,9 @@
 ```bash
 $ tail -f 파일
 ```
+
+- history clear
+```bash
+$ history -c
+```
+[참고](https://unix.stackexchange.com/questions/203290/how-do-i-clear-the-terminal-history)
