[추가] linux 명령어

--- a/Linux/명령어 모음.md
+++ b/Linux/명령어 모음.md
@@ -5,8 +5,17 @@
 $ tail -f 파일
 ```
 
-- history clear
+- **history clear**
 ```bash
 $ history -c
 ```
 [참고](https://unix.stackexchange.com/questions/203290/how-do-i-clear-the-terminal-history)
+
+
+- **폴더내 모든 파일, 디렉토리 출력**
+```bash
+// 모든 디렉토리
+$ find "`pwd`" -not \( -type d -name ".*" -prune \) -type d
+// 모든 파일
+$ find "`pwd`" -not \( -type d -name ".*" -prune \) -type f
+```
