[추가] js decodeURL/encodeURL

--- a/javascript/유용한 문법.md
+++ b/javascript/유용한 문법.md
@@ -27,3 +27,13 @@ test && "있음" || "없음";
 정리하면 위와 같은 `&&`은 값이 존재하면 뒤에껄 넣어주고 `||`는 값이 없으면 뒤에껄 넣어준다
 
 [참고 사이트](http://4urdev.tistory.com/13)
+
+## uri encode/decode
+검색등을 구현할 때 한국어 또는 특수문자를 처리해야할 때 간간히 쓰인다.
+```js
+encodeURIComponent('대한민국');
+"%EB%8C%80%ED%95%9C%EB%AF%BC%EA%B5%AD"
+
+decodeURIComponent('%EB%8C%80%ED%95%9C%EB%AF%BC%EA%B5%AD');
+"대한민국"
+```
