--- a/Linux/명령어 모음.md
+++ b/Linux/명령어 모음.md
@@ -19,3 +19,9 @@ $ find "`pwd`" -not \( -type d -name ".*" -prune \) -type d
 // 모든 파일
 $ find "`pwd`" -not \( -type d -name ".*" -prune \) -type f
 ```
+
+- **폴더 내의 모든 파일 이동시키기**
+```bash
+$ find aaa_dir -name "*.png" -printf "%f\n" -exec mv {} zzz_dir/ \;
+```
+[참고](http://hashcode.co.kr/questions/4476/%EB%A6%AC%EB%88%85%EC%8A%A4%EC%97%90%EC%84%9C-%ED%8F%B4%EB%8D%94-%EB%82%B4%EC%9D%98-%EB%AA%A8%EB%93%A0-%ED%8C%8C%EC%9D%BC%EC%9D%84-%EC%9D%B4%EB%8F%99%ED%95%98%EB%8A%94-%EB%AA%85%EB%A0%B9%EC%96%B4)
