[추가] 이전 커밋 메세지 변경하기

--- a/git/명령어 모음.md
+++ b/git/명령어 모음.md
@@ -73,5 +73,9 @@ $ git ls-files -d | xargs git checkout --
 ```
 - **stage된 파일 unstage하기**
 ```bash
-git reset HEAD [파일이름]
+$ git reset HEAD [파일이름]
+```
+- **이전 커밋 메세지 변경하기**
+```bash
+$ git commit --amend -m "내용"
 ```
