[추가] js deep copy

--- a/javascript/유용한 문법.md
+++ b/javascript/유용한 문법.md
@@ -37,3 +37,19 @@ encodeURIComponent('대한민국');
 decodeURIComponent('%EB%8C%80%ED%95%9C%EB%AF%BC%EA%B5%AD');
 "대한민국"
 ```
+
+## copy(deep copy, shallow copy)
+- jquery
+```js
+// Shallow copy
+var newObject = jQuery.extend({}, oldObject);
+
+// Deep copy
+var newObject = jQuery.extend(true, {}, oldObject);
+```
+- pure js
+```js
+var newObject = JSON.parse(JSON.stringify(obj));
+
+var newObject = Object.assign({},obj);
+```
