[추가] 리눅스명령어

--- a/Linux/명령어 모음.md
+++ b/Linux/명령어 모음.md
@@ -4,7 +4,12 @@
 ```bash
 $ tail -f 파일
 ```
-
+- **저장공간 사용량 확인**
+```bash
+$ df -h /
+Filesystem  Size  Used Avail Use% Mounted on
+none        4.8G  4.8G     0 100% /
+```
 - **history clear**
 ```bash
 $ history -c
