--- a/git/명령어 모음.md
+++ b/git/명령어 모음.md
@@ -74,6 +74,8 @@ $ git ls-files -d | xargs git checkout --
 - **stage된 파일 unstage하기**
 ```bash
 $ git reset HEAD [파일이름]
+또는
+$ git rm --cached <파일>...
 ```
 - **이전 커밋 메세지 변경하기**
 ```bash
