[추가] 정규표현식

--- a/Regular Expression/각 언어별 사용법.md
+++ b/Regular Expression/각 언어별 사용법.md
@@ -59,3 +59,8 @@ function isDecimal(text)
 	return regex.test(text);
 }
 ```
+
+```js
+// 영소대문자, 특수기호, 숫자를 무조건 포함한 8~15글자
+var reg = /^(?=.*[a-zA-Z])(?=.*[!@#$%^*+=-])(?=.*[0-9]).{8,15}$/;
+```
