--- a/Linux/명령어 모음.md
+++ b/Linux/명령어 모음.md
@@ -1,4 +1,19 @@
 
+- **grep**
+  - 내용으로 검색할 때
+  - [file]이 없으면 표준 입력으로부터 입력을 받는다.
+```bash
+$ grep [option] pattern [file]
+```
+```bash
+-c  : 파일의 내용대신 라인의 수를 출력
+-n  : 문자열이 들어있는 라인과 문두에 라인번호를 출력
+
+-A num  : 패턴매칭라인 이후 num만큼 라인 출력
+-B num  : 패턴매칭라인 이전 num만큼 라인 출력
+-C num  : 패턴매칭라인 전후 합으로 num만큼 출력
+```
+
 - **tail**
   - 실시간 로그를 볼 때 유용하다
 ```bash
