--- a/javascript/유용한 문법.md
+++ b/javascript/유용한 문법.md
@@ -53,3 +53,13 @@ var newObject = JSON.parse(JSON.stringify(obj));
 
 var newObject = Object.assign({},obj);
 ```
+
+## object에서 key값들만 뽑아내기
+```js
+var data = {
+  a: 1,
+  b: 2
+}
+console.log(Object.keys(data));
+// ['a', 'b']
+```
