[수정] js 디버깅용

--- a/javascript/디버깅용.md
+++ b/javascript/디버깅용.md
@@ -1,9 +1,44 @@
 ## 디버깅용
 
+### basic
+```js
+console.log('test');
+console.warn('test');
+console.error('test');
+```
+
 ### trace
 이 함수가 호출되기까지의 callstack을 출력해준다.
 ```js
 console.trace();
+```
+
+### count
+count가 호출된 횟수를 동일한 줄에 출력해준다.  
+label을 기준으로 카운팅한다.
+```js
+console.count('label');
+// 1abel: 1
+console.count('label');
+// label: 2
+```
+
+### time, timeEnd
+소요된 시간을 측정하는데 유용  
+`performance`탭에서 성능확인도 가능
+```js
+console.time("Array initialize");
+var array= new Array(1000000);
+for (var i = array.length - 1; i >= 0; i--) {
+    array[i] = new Object();
+};
+console.timeEnd("Array initialize");
+```
+
+### table
+객체와 배열을 table 형태로 볼 수 있게 해준다.
+```js
+console.table([1,2,3],[1,2,3]);
 ```
 
 ### group
@@ -32,3 +67,4 @@ $x(xpath) : xpath 구문
 
 
 [참고](http://ohgyun.com/334)
+[참고](https://developers.google.com/web/tools/chrome-devtools/console/console-reference?hl=ko)
