[수정] js 디버깅용

--- a/javascript/디버깅용.md
+++ b/javascript/디버깅용.md
@@ -65,6 +65,19 @@ $$(selector) : selector에 해당하는 엘리먼트 배열
 $x(xpath) : xpath 구문
 ```
 
+### 이벤트 모니터링
+객체에 등록된 이벤트 리스너 반환
+```js
+getEventListeners(document);
+```
+이벤트 모니터링
+```js
+monitorEvents(document.body, "click"); // 이벤트 수신
+unmonitorEvents(document.body); // 이벤트 수신 중단
+```
+
+
+[이벤트 모니터링](https://developers.google.com/web/tools/chrome-devtools/console/events?hl=ko)
 
 [참고](http://ohgyun.com/334)
 [참고](https://developers.google.com/web/tools/chrome-devtools/console/console-reference?hl=ko)
