[추가] js 가져다쓰기

--- a/javascript/가져다쓰기.md
+++ b/javascript/가져다쓰기.md
@@ -1,3 +1,11 @@
+
+### object에서 max값을 가진 key 구하기
+```js
+Object.keys(count).reduce(function(a, b) {
+  return (count[a] > count[b] ? a : b);
+});
+```
+
 ### string.length로 문자열 자르고 대체 텍스트 넣기
 ```js
 truncateLongText('가나다라마바사아자', 5, '---');
