[추가] js array 관련

--- a/javascript/가져다쓰기.md
+++ b/javascript/가져다쓰기.md
@@ -23,3 +23,28 @@ function truncateLongText(_text, _maxLength, _lastText) {
 	return text;
 };
 ```
+
+---
+
+## Array
+- insert
+```js
+Array.prototype.insert = function ( index, item ) {
+    this.splice( index, 0, item );
+};
+```
+
+- removeByValue
+```js
+
+Array.prototype.removeByValue = function ( index, value) {
+    this = this.filter(function(item) {
+      return item !== value
+    })
+};
+
+// 따로쓰기
+arr.filter(function(item) {
+  return item !== value
+})
+```
