[추가] js 두 객체 배열 비교

--- a/javascript/가져다쓰기.md
+++ b/javascript/가져다쓰기.md
@@ -48,3 +48,13 @@ arr.filter(function(item) {
   return item !== value
 })
 ```
+
+- 두 object array가 다른지 비교
+```js
+function areDifferentByIds(a, b) {
+    var idsA = a.map( function(x){ return x.id; } ).unique().sort();
+    var idsB = b.map( function(x){ return x.id; } ).unique().sort();
+    return (idsA.join(',') !== idsB.join(',') );
+}
+```
+[참고](https://codereview.stackexchange.com/questions/9241/comparing-two-arrays-to-see-if-they-contain-objects-with-different-ids)
