[추가] js 웹 특수기호 치환

--- a/javascript/가져다쓰기.md
+++ b/javascript/가져다쓰기.md
@@ -24,6 +24,13 @@ function truncateLongText(_text, _maxLength, _lastText) {
 };
 ```
 
+### 특수기호 올바르게 치환하기
+```js
+function unEntity(str){
+ return str.replace(/&amp;/g, "&").replace(/&lt;/g, "<").replace(/&gt;/g, ">");
+}
+```
+
 ---
 
 ## Array
