[추가] copy and overwrite equal keys

--- a/javascript/유용한 문법.md
+++ b/javascript/유용한 문법.md
@@ -54,6 +54,21 @@ var newObject = JSON.parse(JSON.stringify(obj));
 var newObject = Object.assign({},obj);
 ```
 
+## copy and overwrite equal keys
+```js
+var obj = {
+  a: 1,
+  b: 2
+}
+var newObj = Object.assign({}, obj,{ a: 10 });
+/*
+newObj = {
+  a: 10,
+  b: 2
+}
+*/
+```
+
 ## object에서 key값들만 뽑아내기
 ```js
 var data = {
