[추가] object merge

--- a/javascript/유용한 문법.md
+++ b/javascript/유용한 문법.md
@@ -69,6 +69,18 @@ newObj = {
 */
 ```
 
+## merge object
+```js
+// Merge an object
+let first = {name: 'Tony'};
+let last = {lastName: 'Stark'};
+let person = Object.assign(first, last);
+ChromeSamples.log(person);
+// {name: 'Tony', lastName: 'Stark'}
+ChromeSamples.log(first);
+// first = {name: 'Tony', lastName: 'Stark'} as the target also changed
+```
+
 ## object에서 key값들만 뽑아내기
 ```js
 var data = {
