[추가] js random string

--- a/javascript/가져다쓰기.md
+++ b/javascript/가져다쓰기.md
@@ -31,6 +31,12 @@ function unEntity(str){
 }
 ```
 
+### random string
+```js
+Math.random().toString(36).substring(7);
+Math.random().toString(36).replace(/[^a-z]+/g, '').substr(0, 5);
+```
+
 ---
 
 ## Array
