--- a/javascript/유용한 문법.md
+++ b/javascript/유용한 문법.md
@@ -55,7 +55,7 @@ var newObject = Object.assign({},obj);
 ```
 
 ## copy and overwrite equal keys
-> es6
+> es5
 ```js
 var obj = {
   a: 1,
@@ -69,9 +69,26 @@ newObj = {
 }
 */
 ```
+> es6
+```js
+const obj = {
+  a: 1,
+  b: 2
+};
+const obj2 = {
+  a: 10
+};
+const newObj = { ...obj, ...obj2 }
+/*
+newObj = {
+  a: 10,
+  b: 2
+}
+*/
+```
 
 ## merge object
-> es6
+> es5
 ```js
 // Merge an object
 let first = {name: 'Tony'};
