--- a/git/명령어 모음.md
+++ b/git/명령어 모음.md
@@ -86,3 +86,8 @@ $ git commit --amend -m "내용"
 ```bash
 $ git show [commit]
 ```
+
+- **다른 브랜치 이름으로 원격 브랜치 올리기**
+```bash
+$ git push origin local-name:remote-name
+```
