--- a/git/명령어 모음.md
+++ b/git/명령어 모음.md
@@ -65,6 +65,10 @@ git commit --amend --date="YYYY-MM-DDThh:mm:ss±hh:mm" -C 28f2d7b81e037aa4fcdf45
 ```bash
 $ git revert [commit]
 ```
+- **일부 파일을 과거 커밋으로 되돌리기**
+```bash
+$ git reset [commit hash] [filename]
+```
 
 - **삭제된 파일 복구하기**
 ```bash
