--- a/git/환경설정.md
+++ b/git/환경설정.md
@@ -29,3 +29,10 @@ github에 올릴때 Permission denied 403 에러 뜰 때 넣어주면 된다
 ```bash
 curl http://git.io/vfhol > ~/.git-completion.bash && echo '[ -f ~/.git-completion.bash ] && . ~/.git-completion.bash' >> ~/.bashrc
 ```
+
+## 언어변경
+`.bashrc`, `.bash_profile` 등에 다음과 같이 추가
+```bash
+alias git='LANG=en_US.UTF-8 git'
+```
+만약 `LANG`이 안되면 `LC_ALL`, `LANGUAGE`로 시도하기
