[Add] array paginate

--- a/javascript/가져다쓰기.md
+++ b/javascript/가져다쓰기.md
@@ -71,3 +71,12 @@ function areDifferentByIds(a, b) {
 }
 ```
 [참고](https://codereview.stackexchange.com/questions/9241/comparing-two-arrays-to-see-if-they-contain-objects-with-different-ids)
+
+- pagination
+```js
+function paginate (array, page_size, page_number) {
+  return array.slice(page_number * page_size, (page_number + 1) * page_size);
+}
+console.log(paginate([1, 2, 3, 4, 5, 6], 2, 1));
+console.log(paginate([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11], 4, 0));
+```
