--- a/Regular Expression/각 언어별 사용법.md
+++ b/Regular Expression/각 언어별 사용법.md
@@ -64,3 +64,8 @@ function isDecimal(text)
 // 영소대문자, 특수기호, 숫자를 무조건 포함한 8~15글자
 var reg = /^(?=.*[a-zA-Z])(?=.*[!@#$%^*+=-])(?=.*[0-9]).{8,15}$/;
 ```
+
+```js
+// url
+var reg = /(https?:\/\/(?:www\.|(?!www))[-a-zA-Z0-9@:%._\+~#=]{2,256}\.[a-z]{2,6}\b([-a-zA-Z0-9@:%_\+.~#?&//=]*)|www\.[-a-zA-Z0-9@:%._\+~#=]{2,256}\.[a-z]{2,6}\b([-a-zA-Z0-9@:%_\+.~#?&//=]*)|https?:\/\/(?:www\.|(?!www))[-a-zA-Z0-9@:%._\+~#=]{2,256}\.[a-z]{2,6}\b([-a-zA-Z0-9@:%_\+.~#?&//=]*))/i
+```
