--- a/git/명령어 모음.md
+++ b/git/명령어 모음.md
@@ -17,6 +17,11 @@ $ git diff [비교 commit 번호] [대상]
 $ git diff -–name-only [비교 commit 번호] [대상]
 ```
 
+- **staged file의 변경 내역 보기**
+```bash
+$ git diff --cached
+```
+
 - **커밋 메세지 여러줄로 작성하기**
 ```bash
 $ git commit -m "
