--- a/javascript/가져다쓰기.md
+++ b/javascript/가져다쓰기.md
@@ -80,3 +80,15 @@ function paginate (array, page_size, page_number) {
 console.log(paginate([1, 2, 3, 4, 5, 6], 2, 1));
 console.log(paginate([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11], 4, 0));
 ```
+
+- 특정 property가 겹치는 object 중복 제거
+```js
+function unique_objects(prop_name) {
+  var prop_of_objects = this.map(function (object) {
+    return object[prop_name];
+  });
+  return this.filter(function (object, position, array) {
+    return mapped_objects.indexOf(object[prop_name]) === position;
+  });
+};
+```
