--- a/Linux/명령어 모음.md
+++ b/Linux/명령어 모음.md
@@ -51,3 +51,8 @@ $ find aaa_dir -name "*.png" -printf "%f\n" -exec mv {} zzz_dir/ \;
 $ cp [타겟 파일이름] [이동할 위치]
 $ cp -r [타겟 폴더이름] [이동할 위치]
 ```
+
+- **열려있는 포트 확인**
+```bash
+$ lsof -i -nP | grep LISTEN | awk '{print $(NF-1)" "$1}' | sort -u
+```
