--- a/git/명령어 모음.md
+++ b/git/명령어 모음.md
@@ -105,3 +105,8 @@ $ git show [commit]
 ```bash
 $ git push origin local-name:remote-name
 ```
+
+- **브랜치 생성과 동시에 이동하기**
+```bash
+git checkout -b [branch name]
+```
