--- a/javascript/유용한 문법.md
+++ b/javascript/유용한 문법.md
@@ -109,3 +109,10 @@ var data = {
 console.log(Object.keys(data));
 // ['a', 'b']
 ```
+
+## object key를 변수로 사용하기
+```js
+const keyName = 'name';
+const value = 'minung.han';
+const object = { [keyName]: value }; // { name: 'minung.han' }
+```
