--- a/git/명령어 모음.md
+++ b/git/명령어 모음.md
@@ -110,3 +110,8 @@ $ git push origin local-name:remote-name
 ```bash
 git checkout -b [branch name]
 ```
+
+- **브랜치를 한 커밋으로 머지하기(squash)**
+```bash
+git merge --squash [branch name]
+```
