--- a/Nodejs/가져다쓰기.md
+++ b/Nodejs/가져다쓰기.md
@@ -1,5 +1,5 @@
 - **간이 request**
-```
+```js
 const request = (options, data) => {
 	return new Promise((resolve, reject) => {
 		var lib = SECURE ? require('https') : require('http');
@@ -15,4 +15,14 @@ const request = (options, data) => {
 		request.end(data);
 	})
 };
+```
+
+- **async request**
+```js
+import { promisify } from 'util';
+import { get, post, patch, del } from 'request';
+
+const [ getPm, postPm, patchPm, deletePm ] = [get, post, patch, del].map(promisify);
+
+export { getPm, postPm, patchPm, deletePm }
 ```
