--- a/git/명령어 모음.md
+++ b/git/명령어 모음.md
@@ -115,3 +115,8 @@ git checkout -b [branch name]
 ```bash
 git merge --squash [branch name]
 ```
+
+- **다른 브랜치의 특정 커밋 가져오기**-
+```bash
+git cherry-pick [commit]
+```
