--- a/Linux/명령어 모음.md
+++ b/Linux/명령어 모음.md
@@ -56,3 +56,18 @@ $ cp -r [타겟 폴더이름] [이동할 위치]
 ```bash
 $ lsof -i -nP | grep LISTEN | awk '{print $(NF-1)" "$1}' | sort -u
 ```
+
+- **gz 압출 풀기**
+```bash
+$ gzip -d filename.gz
+```
+
+- **외부 서버로부터 파일 다운로드 받기**
+파일 단위 다운로드
+```bash
+$ scp -P [port] -i [pem] root@111.11.11.111:/var/log/nginx/access.log ./help-jbnu--log
+```
+폴더 단위 다운로드
+```bash
+$ scp -P [port] -i [pem] -r root@111.11.11.111:/var/log/nginx ./help-jbnu--log
+```
